--- a/reference/1.0.0/CardPointeGatewayAPI/CardPointeGatewayAPI.yaml
+++ b/reference/1.0.0/CardPointeGatewayAPI/CardPointeGatewayAPI.yaml
@@ -339,6 +339,49 @@ paths:
           content:  
             application/json:
               schema: {$ref: '#/components/schemas/BadRequestError'}
+  /cardconnect/rest/inquire:
+    get:
+      tags:
+        - inquire Endpoint Definition
+      x-group-name: CardPointe Gateway API
+      x-proxy-name: inquire
+      x-default-example: PaymentCard
+      summary: The inquire service returns information for an individual transaction, including its settlement status (setlstat) and the response codes from the initial authorization. 
+      description: | 
+        The inquire service returns information for an individual transaction, including its settlement status (<code/>setlstat</code>) and the response codes from the initial authorization. 
+      parameters:
+      - in: query
+        name: merchid
+        required: true
+        schema:
+          $ref: '#/components/schemas/merchid'
+          description: The MID from the original authorization.
+      - in: query
+        name: retref
+        required: true
+        schema:
+          $ref: '#/components/schemas/retref'
+          description: Retrieval reference number from the original authorization.
+      - in: header
+        $ref: '#/components/parameters/ContentTypeHeader'
+      - in: header
+        $ref: '#/components/parameters/Authorization'
+      responses:
+        200: 
+          description: Success
+          content:
+            application/json:
+              schema: {$ref: '#/components/schemas/inquireResponse'}
+        400:
+          description: Not Found
+          content:
+            application/json:
+              schema: {$ref: '#/components/schemas/NotFoundError'}
+        404:
+          description: Bad Request
+          content:  
+            application/json:
+              schema: {$ref: '#/components/schemas/BadRequestError'}
 components:
   parameters:
     Authorization:
@@ -501,11 +544,59 @@ components:
       type: string
       description: Authorization code from original authorization request
       example: 046221
+    authResponse: 
+      x-model-version: 1.0
+      description: auth Response
+      properties:
+        respstat:
+          $ref: '#/components/schemas/respstat'
+        retref:
+          $ref: '#/components/schemas/retref'
+        account:
+          $ref: '#/components/schemas/account'
+        expiry:
+          $ref: '#/components/schemas/expiry'
+        token:
+          $ref: '#/components/schemas/token'
+        amount:
+          $ref: '#/components/schemas/amount'
+        orderId:
+          $ref: '#/components/schemas/orderId'
+        merchid:
+          $ref: '#/components/schemas/merchid'
+        respcode:
+          $ref: '#/components/schemas/respcode'
+        resptext:
+          $ref: '#/components/schemas/resptext'
+        respproc:
+          $ref: '#/components/schemas/respproc'
+##        cof:
+##          $ref: '#/components/schemas/cof'
+##        avsresp:
+##          $ref: '#/components/schemas/avsresp'
+##        cvvresp:
+##          $ref: '#/components/schemas/cvvresp'
+          
+        
     amount:
       maxLength: 12
       type: integer
       description: Capture amount in decimal or in currency minor units (for example, USD Pennies or MXN centavos)
       example: 0.01
+    bintype:
+      maxLength: 16
+      description: |
+        The type of card, based on the BIN.
+
+        Possible values:
+        * Corp
+        * FSA+Prepaid
+        * GSA+Purchase
+        * Prepaid
+        * Prepaid+Corp
+        * Prepaid+Purchase
+        * Purchase
+      example: ""
     batchid:
       maxLength: 12
       type: string
@@ -551,6 +642,11 @@ components:
           $ref: '#/components/schemas/setlstat'
         receipt:
           $ref: '#/components/schemas/receipt'
+    capturedate:
+      maxLength: 14
+      type: string
+      description: The date the transaction was captured in YYYYMMDDHHMMSS.
+      example: 20240101142832
     cardproc:
       maxLength: 4
       type: string
@@ -593,6 +689,11 @@ components:
 
         If Y, the MID can perform ACH transactions.
       example: N
+    acctid:
+      maxLength: 3
+      type: integer
+      description: Account identifier within a profile. Present if transaction utilized a stored profileid. 
+      example: 321
     acctupdater:
       maxLength: 1
       type: string
@@ -604,10 +705,120 @@ components:
         * Y
         * N
       example: N
+    authdate:
+      maxLength: 14
+      type: string
+      example: 20240104
+      description: Date of the authorization in YYYYMMDD.
+    emvTagData:
+      type: array
+      description: The emvTagData field contains an array of objects indicating the returned results of EMV Tag information from their sources.
+      items:
+        properties:
+          TVR:
+            description: |
+              Terminal Verification Results displays the status of the different functions as seen from the terminal.
+              
+              Tag: 95
+            type: number
+            example: 0001100129
+          ARC:
+            description: |
+              The Authorization Response Code indicates the transaction disposition of the transaction received from the issuer for theonline authorization.
+              
+              Tag: 8A
+            type: string
+            example: 00
+          PIN:
+            type: string
+            example: Verified by PIN
+            description: | 
+              Indicates the results of the last CVM performed. If PIN was entered, then "Verified by PIN"	
+              
+              Tag: 9F34
+          Signature:
+            description: |
+              Indicates the results of the last CVM performed. If "true" then CVM supports signature and signature line may be applicable. However, card brands have moved away from requiring signature.
+
+              Returns "unknown" if the signature requirement could not be determined.
+              
+              Tag: 9F34
+            type: string
+            example: unknown
+          Mode:
+            description: |
+              Identifies the mode used to authorize (or decline) the transaction. Always <code>Issuer</code>. 
+            type: string
+            maxLength: 6
+            example: Issuer
+          TSI:
+            description: |
+              The Transaction Status Information field indicates the functions performed in a transaction. 
+              
+              Tag: 9B
+            type: integer
+            example: 6800
+          Application Preferred Name:
+            description: |
+              Preferred mnemonic associated with the AID. If unabailable Application Label provided.
+            
+              Tag: 9F12
+            example: Visa Credit
+            type: string
+          AID:
+            example: A0000000031010
+            type: string
+            description: The Application Identified Data identifies the application as described in ISO/IEC 7816-5.
+          IAD: 
+            example: 06010A03A0B800
+            type: string
+            description: The Issuer Application Data contains proprietary application data for transmission to the issuer in an online transaction.
+          Entry Method:
+            example: Chip Read
+            type: string
+            description: |
+              Indicator identifying how the card information was obtained.
+
+              One of the following values:
+                * Manual
+                * Chip Read
+                * Contactless Chip
+                * Contactless Fallback Swipe
+                * Fallback Keyed
+                * Fallback Swipe
+                * Swipe
+          Application Label:
+            example: VISA CREDIT
+            type: string
+            description: Mnemonic associated with the AID according to ISO/IEC 7816-5. If unavailable Application Preferred Name displayed. 	
     enabled:
       type: boolean
       example: true
       description: Specifies whether the MID is currently enabled for use. 
+    expiry:
+      type: string
+      example: 1228
+      description: The account's expiration date in MMYY.
+    entrymode:
+      maxLength: 25
+      example: Digital Wallet
+      type: string
+      description: |
+        Possible Values:
+          * Keyed
+          * Moto
+          * ECommerce
+          * Recurring
+          * Swipe (Non EMV)
+          * DigitalWallet
+          * EMVContact
+          * Contactless
+          * Fallback to Track
+          * Fallback to Keyed
+    fee_authcode:
+      maxLength: 6
+      type: integer
+      description: Duplicate of the <code>authcode</code> field included if the transaction included a fee (for example, a credit card surcharge).
     fee_format:
       type: string
       description: | 
@@ -644,6 +855,10 @@ components:
       example: 4
       description: |
         Specifies the fee value configured for the MID, where the value is either a percentage or flat amount, used to calculate the fee for each transaction.
+    fee_retref:
+      type: integer
+      example: ""
+      description: The unique retrieval reference number for a fee. If not applicable or the same as the transaction retref, returns an empty value ("").
     declineCategory:
       type: integer
       maxLength: 1
@@ -680,15 +895,101 @@ components:
         * <code>Do not retry</code> - Returned for declineCategory 1.
         * <code>Wait to retry</code> - Returned for declineCategory 2.
         * <code>Fix the request and retry</code> - Returned for declineCategory 3. 
+    inquireResponse:
+      x-model-version: 1.0
+      description: inquire Response
+      properties:
+        merchid:
+          $ref: '#/components/schemas/merchid'
+        orderid:
+          $ref: '#/components/schemas/orderId'
+        expiry:
+          $ref: '#/components/schemas/expiry'
+        amount:
+          $ref: '#/components/schemas/amount'
+        currency:
+          $ref: '#/components/schemas/currency'
+        retref:
+          $ref: '#/components/schemas/retref'
+        respcode:
+          $ref: "#/components/schemas/respcode"
+        respproc:
+          $ref: '#/components/schemas/respproc'
+        respstat:
+          $ref: '#/components/schemas/respstat'
+        resptext:
+          $ref: '#/components/schemas/resptext'
+        batchid:
+          $ref: '#/components/schemas/batchid'
+        setlstat:
+          $ref: '#/components/schemas/setlstat'
+        capturedate:
+          $ref: '#/components/schemas/capturedate'
+        settledate:
+          $ref: '#/components/schemas/settledate'
+        signature:
+          $ref: '#/components/schemas/signature'
+        token:
+          $ref: '#/components/schemas/token'
+        profileid:
+          $ref: '#/components/schemas/profileid'
+        acctid:
+          $ref: '#/components/schemas/acctid'
+        authdate:
+          $ref: '#/components/schemas/authdate'
+        lastfour:
+          $ref: '#/components/schemas/lastfour'
+        name:
+          $ref: '#/components/schemas/name'
+        bintype:
+          $ref: '#/components/schemas/bintype'
+        entrymode:
+          $ref: '#/components/schemas/entrymode'
+        fee_authcode:
+          $ref: '#/components/schemas/fee_authcode'
+        fee_format:
+          $ref: '#/components/schemas/fee_format'
+        fee_merchid:
+          $ref: '#/components/schemas/fee_merchid'
+        fee_retref:
+          $ref: '#/components/schemas/fee_retref'
+        fee_type:
+          $ref: '#/components/schemas/fee_type'
+        fee_value:
+          $ref: '#/components/schemas/fee_value'
+        emvTagData:
+          $ref: '#/components/schemas/emvTagData'
+        receipt:
+          $ref: '#/components/schemas/receipt'
+        userfields:
+          $ref: '#/components/schemas/userfields'
+        voidable:
+          $ref: '#/components/schemas/voidable'
+        refundable:
+          $ref: '#/components/schemas/refundable'
+        declineCategory:
+          $ref: '#/components/schemas/declineCategory'
+        declineCategoryText:
+          $ref: '#/components/schemas/declineCategoryText'
     invoiceid:
       maxLength: 12
       type: string
       description: An optional invoice ID
       example: 120393822
+    lastfour:
+      maxLength: 4
+      type: integer
+      description: Last 4 digits of the token or card number. 
+      example: 1111
     merchid:
       maxLength: 16
       type: string
       example: 123456789012
+    name:
+      maxLength: 30
+      type: string
+      description: The account name, if returned in the track data.
+      example: Dylan Wolf
     postal:
       maxLength: 9
       type: string
@@ -697,6 +998,11 @@ components:
 
         Optional if token is specified.
       example: 19355
+    profileid:
+      maxLength: 20
+      type: string
+      description: Primary identifier to access profiles. Present if transaction utilized a stored profileid. 
+      example: 11700182899933000746
     orderId:
       maxLength: 50
       type: string
@@ -823,11 +1129,32 @@ components:
           
           Defualts to **N** if not provided.
       example: N
+    refundable:
+      type: string
+      description: |
+        Indicates whether the transaction can be refunded in its current state.
+
+        The refundable value is determined by the status of the batch at the time of inquiry, as well as the MID configuration. If the MID is enabled to refund for unsettled authorizations, then refundable always returns Y.
+
+        If Y, the transaction can be refunded.
+
+        If N, the transaction cannot be refunded.
+      maxLength: 1
+      example: Y
     retref:
       type: integer
       maxLength: 14
       description: CardPointe retrieval reference number from authorization response
       example: 123456789012
+    signature:
+      description: JSON-escaped, Base64-encoded, Gzipped, BMP of signature data (from a signature-capable terminal). Returned if the authorization used a token that had associated signature data or track data with embedded signature data.
+      maxLength: 6144
+      example: ""
+    settledate:
+      maxLength: 14
+      type: string
+      example: 20240103142834
+      description: The date the transaction was settled in YYYYMMDDHHMMSS.
     setlstat:
       maxLength: 40
       type: string
@@ -849,6 +1176,37 @@ components:
         The tokenized account number used to verify that the card type is eligible for surcharging.
 
         Optional if postal is specified.
+    userfields: 
+      type: array 
+      items: 
+        properties:
+          name:
+            type: string
+            description: The name of the created field.
+          value:
+            type: string
+            description: The value of the field.
+      example:
+        "userfields":
+          [
+            {"udf0": "value0"},
+            {"udf1": "value1"},
+            {"udf2": "value2"}, 
+            {"custommerchant": "ABC Company"},
+            {"customphone": "888-888-8888"}
+          ]
+    voidable:
+      type: string
+      maxLength: 1
+      example: Y
+      description: |
+        Indicates whether the transaction can be voided in its current state.
+
+        The <code>voidable</code> value is determined by the status of the batch at the time of inquiry.
+        
+        If <code>Y</code>, the transaction can be voided.
+        
+        If <code>N</code>, the transaction cannot be voided.
     inquireMerchantSuccess:
       x-model-version:
       description: inquireMerchant Response
